# normalizer

./: .gitignore  .travis.yml  AUTHORS  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/workflows/: test.yml
libindic/normalizer/: __init__.py  core.py  expose.py  normalizer_ml.rules
libindic/normalizer/rules/: normalizer.en.yaml  normalizer.ml.yaml  normalizer_ml.rules
libindic/normalizer/tests/: test_normalizer.py
normalizer/: __init__.py  core.py  expose.py  normalizer.py  normalizer_ml.rules
rules/: normalizer_ml.rules
tests/: test_normalizer.py
