[project]
name = "libindic-normalizer"
authors = [
  { name = "Santhosh Thottingal", email = "santhosh.thottingal@gmail.com" },
  { name = "Akshay S Dinesh", email = "asdofindia@gmail.com" },
  { name = "Balasankar C", email = "balasankarc@autistici.org" },
  { name = "Diadara", email = "nithin111@gmail.com" },
  { name = "Jerin Philip", email = "monu1618@gmail.com" },
  { name = "Jishnu Mohan", email = "jishnu7@gmail.com" },
  { name = "Vasudev Kamath", email = "kamathvasudev@gmail.com" },
  { name = "sara-02", email = "sarahmasud02@gmail.com" },
]
description = "Malayalam language normalizer (Experimental)"
requires-python = ">=3.7"
license = { text = "LGPL-3.0" }
version = "2.0"
readme = "README.md"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: DFSG approved",
  "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Programming Language :: Python",
]
dependencies = [
  "importlib-resources",
  "pyyaml"
]

[project.urls]
Homepage = "https://libindic.org/normalizer"


[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project.entry-points."libindic.api.rest"]
normalize = "normalizer.expose:normalize"

[tool.distutils.bdist_wheel]
universal = true
