[metadata]
name = normalizer
author = Santhosh Thottingal
author-email = santhosh.thottingal@gmail.com
summary = Malayalam language normalizer (Experimental)
license = LGPL-3.0
description-file =
  README.rst
home-page = https://libindic.org/normalizer
requires-python = >=2.7
classifier =
  Development Status :: 5 - Production/Stable
  License :: DFSG approved
  License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
  Operating System :: OS Independent
  Intended Audience :: Developers
  Intended Audience :: Information Technology
  Programming Language :: Python

[files]
packages =
 normalizer

[entry_points]
libindic.api.rest =
    normalize = normalizer.expose:normalize

[wheel]
universal=1
    
