[metadata]
name = libindic-normalizer
author = Santhosh Thottingal
author_email = santhosh.thottingal@gmail.com
description = Malayalam language normalizer (Experimental)
license = LGPL-3.0
long_description = file: README.md
url = https://libindic.org/normalizer
classifiers =
  Development Status :: 5 - Production/Stable
  License :: DFSG approved
  License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
  Operating System :: OS Independent
  Intended Audience :: Developers
  Intended Audience :: Information Technology
  Programming Language :: Python

[options]
namespace_packages = libindic
packages = libindic.normalizer
python_requires = >=2.7
tests_require =
  pytest

[options.package_data]
* = *.rules

[options.entry_points]
libindic.api.rest =
    normalize = normalizer.expose:normalize

[bdist_wheel]
universal=1
